# Sensor-fusion-UKF-ROS2

./: .gitignore  README.md  package.xml  setup.py
kalmanfilter/: data_extraction.py  plot_results.py  ukf_filterpy.py
launch/: kalmanfilter_launch.py
results/files/: gnss_trajectory.tum  imu_trajectory.tum  kf_data.csv  ukf_trajectory.tum
