<?xml version="1.0"?>
<package format="3">
  <name>kalmanfilter</name>
  <version>0.0.1</version>
  <description>O pacote kalmanfilter portado para ROS 2</description>

  <maintainer email="sophia@todo.todo">sophia</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
